<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/register_rela01"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_main"
            android:gravity="center"
            android:text="@string/app_checkstu"
            android:textColor="@color/app_white"
            android:textSize="20dp" />
        <ImageView
            android:id="@+id/register_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/back"/>
    </RelativeLayout>
        <ImageView
            android:id="@+id/register_headimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user_headimg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:gravity="center|right"
                android:text="@string/app_nickname_left"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/register_nickname"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="80dp"
                android:background="@drawable/bg_white_input1"
                android:hint="@string/app_nickname"
                android:textSize="14dp" />
        </RelativeLayout>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp">

          <TextView
              android:layout_width="70dp"
              android:layout_height="40dp"
              android:gravity="center|right"
              android:text="@string/app_jieshao_left"
              android:textSize="14dp" />

          <EditText
              android:id="@+id/register_introduce"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="80dp"
              android:enabled="true"
              android:gravity="top"
              android:inputType="textMultiLine"
              android:minLines="5"
              android:maxLines="5"
              android:textSize="14dp"
              android:hint="@string/app_jieshao"
              android:scrollbars="vertical"
              android:background="@drawable/bg_white_input1"/>

      </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/app_locationnow"

            android:gravity="center|right"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/register_location_now"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_white_input1"
            android:textSize="12dp" />

        <ImageView
            android:id="@+id/register_location_dingwei"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"

            android:layout_marginRight="5dp"
            android:src="@drawable/location_now" />
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/app_password"
                android:gravity="center|right"
                android:textSize="14dp"/>
            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:password="true"
                android:layout_marginLeft="80dp"
                android:textSize="14dp"
                android:background="@drawable/bg_white_input1"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:gravity="center|right"
                android:text="@string/app_passwordag"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/register_passwordag"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="80dp"
                android:background="@drawable/bg_white_input1"
                android:password="true"
                android:textSize="14dp" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/register_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:background="@drawable/bg_main_bt"
        android:text="@string/app_sure"
        android:textColor="@color/app_white"
        android:textSize="20dp" />
</LinearLayout>
