<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_user_dialog_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white2"
    android:minWidth="200dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="30dp"
    android:paddingTop="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/main_add_price"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/app_black"/>

        <EditText
            android:id="@+id/text_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_add_price"
            android:inputType="number|numberDecimal"
            android:minHeight="45dp"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/main_add_inprice"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/app_black"/>

        <EditText
            android:id="@+id/text_mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_add_inprice"
            android:inputType="number|numberDecimal"
            android:minHeight="45dp"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:text="@string/main_add_post"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/app_black"/>
        <EditText
            android:id="@+id/text_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:hint="@string/main_add_post"
            android:minHeight="45dp"
            android:textSize="18sp" />
    </LinearLayout>




    <Button
        android:id="@+id/btn_save_pop"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/app_sure1"
        android:textColor="@color/app_white"
        android:background="@drawable/bg_main_bt"/>

</LinearLayout>