<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/login_userheadimg"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:roundAsCircle="true"
        app:placeholderImage="@drawable/logo_main"/>

    <LinearLayout
        android:id="@+id/li_01"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/login_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/app_stuId"
                android:maxLength="11"
                android:textColor="@color/app_black"
                android:textSize="15dp"
                android:background="@drawable/bg_white_input"/>
            <ImageView
                android:id="@+id/login_account_del"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/login_input_account_clear"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:password="true"
                android:hint="@string/app_stupassword"
                android:maxLength="16"
                android:textColor="@color/app_black"
                android:textSize="15dp"
                android:background="@drawable/bg_white_input"/>
            <ImageView
                android:id="@+id/login_password_dis"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/login_input_password_display"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/login_bt"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_login"
            android:textColor="@color/app_white"
            android:textSize="20dp"
            android:background="@drawable/bg_main_bt"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/Re_01"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/li_01"
        android:padding="10dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:onClick="login_register"
            android:text="@string/app_resgiter"
            android:textSize="16dp"/>
        <TextView
            android:id="@+id/login_forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/app_forgetPassword"
            android:textSize="16dp" />
    </RelativeLayout>
</RelativeLayout>