<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/register_rela01"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_main"
            android:gravity="center"
            android:text="@string/app_checkstu"
            android:textColor="@color/app_white"
            android:textSize="20dp" />
        <ImageView
            android:id="@+id/register_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/back"/>
    </RelativeLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/schoollogo"
            android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="40dp"
        android:paddingTop="80dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/register_stuid"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"
                android:hint="@string/app_stuId"
                android:maxLength="11"
                android:textColor="@color/app_black"
                android:textSize="15dp"
                android:background="@drawable/bg_white_input"/>

            <ImageView
                android:id="@+id/register_stuid_del"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/login_input_account_clear" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <EditText
                android:id="@+id/register_stupass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/app_jiaowusystem"
                android:password="true"
                android:textColor="@color/app_black"
                android:textSize="15dp"
                android:background="@drawable/bg_white_input" />

            <ImageView
                android:id="@+id/register_stupass_dis"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/login_input_password_display" />
        </RelativeLayout>
        <Button
            android:id="@+id/register_check_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_gocheck"
            android:textColor="@color/app_white"
            android:textSize="20dp"
            android:background="@drawable/bg_main_bt"/>
    </LinearLayout>
</RelativeLayout>
